2002-01-08  Sven Wischnowsky  <wischnow@zsh.org>

	* 16417: Src/Zle/computil.c: don't report _arguments-specs more
	than once (not even shared options with multiple sets)

2002-01-07  Sven Wischnowsky  <wischnow@zsh.org>

	* 16408: Src/Zle/compcore.c: make sure auto menu isn't started
	accidentially when bashautolist is set

	* 16407: Completion/X/Command/_netscape: fix nested _tags-loops
	by re-initialising the outer one when leaving the inner one

	* 16406: Completion/Base/Completer/_approximate,
	Completion/Unix/Type/_signals, Completion/X/Command/_netscape,
	Completion/Zsh/Command/_kill, Doc/Zsh/builtins.yo: fixes for
	completion of signal names with SIG prefix and for completing
	command names instead of pids

2002-01-05  Bart Schaefer  <schaefer@zsh.org>

	* 16400, 16401: Src/subst.c: preserve empty words that result from
	brace expansion.
	
	* users/4483: Completion/Unix/Command/_cvs: with "cvs add" et al.,
	complete names of locally removed (but not committed) files.

	* 15746: Src/utils.c: remove (with #if) an incorrect optimization
	in the maildir version of mailstat().
	
2002-01-04  Oliver Kiddle  <opk@zsh.org>

	* 16398: Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo,
	Completion/Base/Utility/_regex_arguments, Doc/Zsh/compwid.yo,
	Completion/Unix/Type/_time_zone, Completion/Unix/Type/_directories,
	Completion/Unix/Type/_file_systems: updated zstyle completion and
	related cleanup

2002-01-03  Oliver Kiddle  <opk@zsh.org>

	* 16397: Completion/Base/Widget/_complete_help: use nul as separator
	instead of colon to avoid problems with _value:<param> functions

	* 16396: Completion/Unix/Command/_chown: fix argument handling bugs

2002-01-03  Clint Adams  <clint@zsh.org>

	* 16393: Completion/Debian/Command/.distfiles,
	Completion/Debian/Command/_apt-show-versions: completion for Christoph
	Martin's apt-show-versions script.

2002-01-02  Oliver Kiddle  <opk@zsh.org>

	* users/4561: Completion/Unix/Command/_zip: fix bug with finding